force-app/main/default/objects/Product_Summary__c/Product_Summary__c.object-meta.xml
<CustomObject>
    <label>Product Summary</label>
    <nameField>
        <displayFormat>RRPS-{0000}</displayFormat>
        <label>RR Product Summary Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Summary</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>