force-app/main/default/objects/Product_Summary__c/fields/Billed_Value__c.field-meta.xml
<CustomField>
    <fullName>Billed_Value__c</fullName>
    <label>Billed Value</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>