force-app/main/default/objects/Product_Summary__c/fields/Cumulative_Carves__c.field-meta.xml
<CustomField>
    <fullName>Cumulative_Carves__c</fullName>
    <label>Cumulative Carves</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>