force-app/main/default/objects/Product_Summary__c/fields/Deferred_Balance__c.field-meta.xml
<CustomField>
    <fullName>Deferred_Balance__c</fullName>
    <label>Deferred Balance</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>