force-app/main/default/objects/Product_Summary__c/fields/Product_Summary_Guid__c.field-meta.xml
<CustomField>
    <fullName>Product_Summary_Guid__c</fullName>
    <externalId>true</externalId>
    <label>Product Summary Guid</label>
    <length>255</length>
    <type>Text</type>
</CustomField>