force-app/main/default/objects/Product_Summary__c/fields/Revenue_Contract_ID__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Contract_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Revenue Contract ID</label>
    <referenceTo>Revenue_Contract__c</referenceTo>
    <relationshipName>RR_Product_Summaries</relationshipName>
    <type>Lookup</type>
</CustomField>