force-app/main/default/objects/Product_Summary__c/fields/Unposted__c.field-meta.xml
<CustomField>
    <fullName>Unposted__c</fullName>
    <label>Unposted</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>