force-app/main/default/objects/Product_Summary__c/fields/Usage_Bookings__c.field-meta.xml
<CustomField>
    <fullName>Usage_Bookings__c</fullName>
    <label>Usage Bookings</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>